cfdsa-master_18052021/workshop04/fortune-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mypol-netpol
  labels: 
    name: mypol-netpol
spec:
  podSelector:
    matchLabels:
      name: fortune-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: myshell
